add requirements for production

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ wheel>=0.29
 numpy
 pandas
 scikit-learn
+import matplotlib.pyplot as plt
+import seaborn as sns
 
 # tests/linter
 black
@@ -27,3 +29,4 @@ six>=1.14
 joblib
 memoized-property
 termcolor
+streamlit
